tweaks on the sectioning tags section

--- a/reset-normalise/full-html-example.html
+++ b/reset-normalise/full-html-example.html
@@ -24,7 +24,7 @@
     </section>
     <section class="structural-tags">
       <header>
-        <h2>Structural tags</h2>
+        <h2>Sectioning tags</h2>
         <p>This is a header, usually with a heading (h1 - h6) inside</p>
       </header>
 
